# github-actions-test

./: Cargo.toml  README.md
.github/workflows/: build-artifact.yml
src/: main.rs
