[package]
name = "github-actions-test"
version = "0.1.0"
authors = ["Rohan Gautam <rohan1gautam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0"
futures = "0.3.13"
openssl = { version = "0.10", features = ["vendored"] }